@@ -1,15 +1,18 @@
 package de.smbonline.mdssync.api;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import de.smbonline.mdssync.exc.ErrorHandling;
 import de.smbonline.mdssync.jaxb.search.request.And;
 import de.smbonline.mdssync.jaxb.search.request.Application;
 import de.smbonline.mdssync.jaxb.search.request.BetweenIncl;
 import de.smbonline.mdssync.jaxb.search.request.Direction;
 import de.smbonline.mdssync.jaxb.search.request.EqualsField;
 import de.smbonline.mdssync.jaxb.search.request.ExpertSearchExpression;
+import de.smbonline.mdssync.jaxb.search.request.IsNotNull;
 import de.smbonline.mdssync.jaxb.search.request.Module;
 import de.smbonline.mdssync.jaxb.search.request.Modules;
 import de.smbonline.mdssync.jaxb.search.request.Not;
+import de.smbonline.mdssync.jaxb.search.request.NotEqualsField;
 import de.smbonline.mdssync.jaxb.search.request.ObjectFactory;
 import de.smbonline.mdssync.jaxb.search.request.Or;
 import de.smbonline.mdssync.jaxb.search.request.Search;
@@ -18,7 +21,7 @@ import de.smbonline.mdssync.jaxb.search.request.SelectField;
 import de.smbonline.mdssync.jaxb.search.request.Sort;
 import de.smbonline.mdssync.jaxb.search.request.SortField;
 import de.smbonline.mdssync.jaxb.search.request.TrashBinHandling;
-import de.smbonline.mdssync.rest.Any;
+import de.smbonline.mdssync.rest.Data;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.lang.Nullable;
@@ -26,15 +29,13 @@ import org.springframework.lang.Nullable;
 import java.io.IOException;
 import java.io.InputStream;
 import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneOffset;
-import java.time.ZonedDateTime;
+import java.time.OffsetDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.stream.Stream;
 
 import static de.smbonline.mdssync.util.MdsConstants.*;
 import static de.smbonline.mdssync.util.Validations.*;
@@ -42,24 +43,24 @@ import static de.smbonline.mdssync.util.Validations.*;
 public class SearchRequestHelper {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(SearchRequestHelper.class);
-    private static final ObjectFactory FACTORY = new ObjectFactory();
-    private static final Any CONFIG = loadRequestConfig();
+    private static final ObjectFactory REQUEST_FACTORY = new ObjectFactory();
+    private static final Data CONFIG = loadRequestConfig();
 
-    private static Any loadRequestConfig() {
-        try (InputStream stream = SearchRequestHelper.class.getResourceAsStream("/module-requests.json")) {
-            return new ObjectMapper().readValue(stream, Any.class);
+    private static Data loadRequestConfig() {
+        try (InputStream stream = SearchRequestHelper.class.getResourceAsStream("/module-search-requests.json")) {
+            return new ObjectMapper().readValue(stream, Data.class);
         } catch (IOException exc) {
-            LOGGER.error("Can't load module-requests.json ", exc);
-            LOGGER.warn("!!! Absence of module-requests.json can have massive performance impact on the API requests !!!");
-            return new Any();
+            ErrorHandling.capture(exc, "Can't load module-search-requests.json");
+            LOGGER.warn("!!! Absence of module-search-requests.json can have massive performance impact on the API requests !!!");
+            return new Data();
         }
     }
 
-    private final MdsApiConfig config;
+    private final MdsApiConfig apiConfig;
     private final String module;
 
     public SearchRequestHelper(final MdsApiConfig apiConfig, final String moduleName) {
-        this.config = apiConfig;
+        this.apiConfig = apiConfig;
         this.module = moduleName;
     }
 
@@ -79,14 +80,10 @@ public class SearchRequestHelper {
      * @return search payload
      */
     public Search buildSearchPayload(final Long... mdsIds) {
-        Search search = FACTORY.createSearch();
+        Search search = REQUEST_FACTORY.createSearch();
 
         // sorting
-        SortField field = FACTORY.createSortField();
-        field.setFieldPath(FIELD_ID);
-        field.setDirection(Direction.ASCENDING);
-        Sort sort = FACTORY.createSort();
-        sort.getField().add(field);
+        Sort sort = buildSortBy(FIELD_ID);
         search.setSort(sort);
 
         // select fields
@@ -94,9 +91,9 @@ public class SearchRequestHelper {
         search.setSelect(select);
 
         // filters
-        And expression = this.config.isApprovalFilterEnabled() ? buildSMBFilter(this.module) : FACTORY.createAnd();
+        And expression = this.apiConfig.isApprovalFilterEnabled() ? buildSMBFilter(this.module) : REQUEST_FACTORY.createAnd();
         expression.getAndOrOrOrNot().add(buildIncludeFilter(mdsIds));
-        ExpertSearchExpression expert = FACTORY.createExpertSearchExpression();
+        ExpertSearchExpression expert = REQUEST_FACTORY.createExpertSearchExpression();
         expert.setAnd(expression);
         search.setExpert(expert);
         search.setTrashBin(TrashBinHandling.INCLUDED);
@@ -122,23 +119,16 @@ public class SearchRequestHelper {
     public Search buildSearchPayload(
             final int offset,
             final int limit,
-            final @Nullable LocalDateTime lastModifiedFrom,
-            final @Nullable LocalDateTime lastModifiedTo,
+            final @Nullable OffsetDateTime lastModifiedFrom,
+            final @Nullable OffsetDateTime lastModifiedTo,
             final @Nullable String sorting,
             final @Nullable Object... filters) {
 
-        Search search = FACTORY.createSearch();
+        Search search = REQUEST_FACTORY.createSearch();
 
         // sorting
         if (sorting != null) {
-            String fieldPath = sorting.charAt(0) == '+' || sorting.charAt(0) == '-' ? sorting.substring(1) : sorting;
-            Direction direction = sorting.charAt(0) == '-' ? Direction.DESCENDING : Direction.ASCENDING;
-
-            SortField field = FACTORY.createSortField();
-            field.setFieldPath(fieldPath);
-            field.setDirection(direction);
-            Sort sort = FACTORY.createSort();
-            sort.getField().add(field);
+            Sort sort = buildSortBy(sorting);
             search.setSort(sort);
         }
 
@@ -147,7 +137,7 @@ public class SearchRequestHelper {
         search.setSelect(select);
 
         // filtering
-        And expression = this.config.isApprovalFilterEnabled() ? buildSMBFilter(this.module) : FACTORY.createAnd();
+        And expression = this.apiConfig.isApprovalFilterEnabled() ? buildSMBFilter(this.module) : REQUEST_FACTORY.createAnd();
         if (lastModifiedFrom != null || lastModifiedTo != null) {
             BetweenIncl between = buildModifiedRangeFilter(lastModifiedFrom, lastModifiedTo);
             expression.getAndOrOrOrNot().add(between);
@@ -155,7 +145,7 @@ public class SearchRequestHelper {
         if (isVarArgsDefined(filters)) {
             Arrays.stream(filters).forEach(expression.getAndOrOrOrNot()::add);
         }
-        ExpertSearchExpression expert = FACTORY.createExpertSearchExpression();
+        ExpertSearchExpression expert = REQUEST_FACTORY.createExpertSearchExpression();
         expert.setAnd(expression);
         search.setExpert(expert);
 
@@ -167,19 +157,63 @@ public class SearchRequestHelper {
     }
 
     /**
+     * Build a payload to search for items that are not approved for publishing anymore. This is basically the
+     * inversion of the default approved-filter that is applied for all searches.
+     *
+     * @return payload to search for unapproved items - items where the approved flag has been revoked
+     */
+    public Search buildSearchNotApprovedPayload() {
+        Search search = REQUEST_FACTORY.createSearch();
+
+        // select id
+        Select select = REQUEST_FACTORY.createSelect();
+        select.getField().add(buildSelectField(FIELD_ID));
+        search.setSelect(select);
+
+        // sort by id
+        Sort sort = buildSortBy(FIELD_ID);
+        search.setSort(sort);
+
+        // add inverted approval filters
+        Map<String, String> approvedFilters = getSMBFilterValues(this.module);
+        Object[] notApprovedFilters = approvedFilters.entrySet().stream().map(entry -> {
+            if (entry.getKey().endsWith(".TypeVoc")) {
+                EqualsField equal = REQUEST_FACTORY.createEqualsField();
+                equal.setFieldPath(entry.getKey());
+                equal.setOperand(entry.getValue());
+                return new Object[]{equal};
+            } else {
+                NotEqualsField notEqual = REQUEST_FACTORY.createNotEqualsField();
+                notEqual.setFieldPath(entry.getKey());
+                notEqual.setOperand(entry.getValue());
+                IsNotNull notNull = REQUEST_FACTORY.createIsNotNull();
+                notNull.setFieldPath(entry.getKey());
+                return new Object[]{notEqual, notNull};
+            }
+        }).flatMap(Stream::of).toArray();
+        ExpertSearchExpression expert = REQUEST_FACTORY.createExpertSearchExpression();
+        expert.setAnd(and(notApprovedFilters));
+        search.setExpert(expert);
+
+        // done
+        return search;
+    }
+
+    /**
      * Build a payload to search for deleted items.
      *
      * @return payload to search for deleted items (items in trash bin)
      */
     public Search buildSearchDeletedPayload() {
-        Select select = FACTORY.createSelect();
+        Select select = REQUEST_FACTORY.createSelect();
         select.getField().add(buildSelectField(FIELD_ID));
         select.getField().add(buildSelectField(FIELD_ORG_UNIT)); // required for SyncExecuter to check if object is deleted
         select.getField().add(buildSelectField(FIELD_LAST_MODIFIED)); // required for SyncExecuter to check if synced object is up-to-date
 
-        Search search = FACTORY.createSearch();
+        Search search = REQUEST_FACTORY.createSearch();
         search.setTrashBin(TrashBinHandling.EXCLUSIVE);
         search.setSelect(select);
+        search.setSort(buildSortBy(FIELD_ID));
         return search;
     }
 
@@ -192,20 +226,16 @@ public class SearchRequestHelper {
      * @return search filter
      */
     private BetweenIncl buildModifiedRangeFilter(
-            final @Nullable LocalDateTime lastModifiedFrom,
-            final @Nullable LocalDateTime lastModifiedTo) {
+            final @Nullable OffsetDateTime lastModifiedFrom,
+            final @Nullable OffsetDateTime lastModifiedTo) {
 
-        ZonedDateTime utcFrom = lastModifiedFrom == null
-                ? ZonedDateTime.ofInstant(Instant.EPOCH, ZoneOffset.UTC)
-                : lastModifiedFrom.atZone(ZoneOffset.UTC);
-        ZonedDateTime utcTo = lastModifiedTo == null
-                ? LocalDateTime.now().atZone(ZoneOffset.UTC)
-                : lastModifiedTo.atZone(ZoneOffset.UTC);
+        OffsetDateTime from = Optional.ofNullable(lastModifiedFrom).orElse(OffsetDateTime.ofInstant(Instant.EPOCH, MDS_DATE_ZONE));
+        OffsetDateTime to = Optional.ofNullable(lastModifiedTo).orElse(OffsetDateTime.now(MDS_DATE_ZONE));
 
-        BetweenIncl between = FACTORY.createBetweenIncl();
+        BetweenIncl between = REQUEST_FACTORY.createBetweenIncl();
         between.setFieldPath(FIELD_LAST_MODIFIED);
-        between.setOperand1(utcFrom.format(DateTimeFormatter.ISO_OFFSET_DATE_TIME));
-        between.setOperand2(utcTo.format(DateTimeFormatter.ISO_OFFSET_DATE_TIME));
+        between.setOperand1(from.format(DateTimeFormatter.ISO_OFFSET_DATE_TIME));
+        between.setOperand2(to.format(DateTimeFormatter.ISO_OFFSET_DATE_TIME));
         return between;
     }
 
@@ -226,7 +256,7 @@ public class SearchRequestHelper {
      * @return search filter
      */
     public Not buildExcludeFilter(final Long... mdsIds) {
-        Not not = FACTORY.createNot();
+        Not not = REQUEST_FACTORY.createNot();
         not.setOr(combine(mdsIds));
         return not;
     }
@@ -239,7 +269,7 @@ public class SearchRequestHelper {
      */
     private Or combine(final Long... mdsIds) {
         return or(Arrays.stream(mdsIds).map(id -> {
-            EqualsField equal = FACTORY.createEqualsField();
+            EqualsField equal = REQUEST_FACTORY.createEqualsField();
             equal.setFieldPath(FIELD_ID);
             equal.setOperand(String.valueOf(id));
             return equal;
@@ -247,7 +277,7 @@ public class SearchRequestHelper {
     }
 
     /**
-     * Create a default filter that should always be applied when searching objects in MDS.
+     * Create a default filter that should always be applied when searching items in MDS.
      * It ensures we are allowed to use the returned data. The filter differs depending on the module to search in.
      *
      * @param module module to search in
@@ -256,16 +286,28 @@ public class SearchRequestHelper {
     private static And buildSMBFilter(final String module) {
         Map<String, String> filters = getSMBFilterValues(module);
         EqualsField[] fields = filters.entrySet().stream().map(entry -> {
-            EqualsField equal = FACTORY.createEqualsField();
+            EqualsField equal = REQUEST_FACTORY.createEqualsField();
             equal.setFieldPath(entry.getKey());
             equal.setOperand(entry.getValue());
             return equal;
         }).toArray(EqualsField[]::new);
-        return fields.length == 0 ? FACTORY.createAnd() : and((Object[]) fields);
+        return fields.length == 0 ? REQUEST_FACTORY.createAnd() : and((Object[]) fields);
+    }
+
+    private static Sort buildSortBy(final String sorting) {
+        String fieldPath = sorting.charAt(0) == '+' || sorting.charAt(0) == '-' ? sorting.substring(1) : sorting;
+        Direction direction = sorting.charAt(0) == '-' ? Direction.DESCENDING : Direction.ASCENDING;
+
+        SortField field = REQUEST_FACTORY.createSortField();
+        field.setFieldPath(fieldPath);
+        field.setDirection(direction);
+        Sort sort = REQUEST_FACTORY.createSort();
+        sort.getField().add(field);
+        return sort;
     }
 
     private static @Nullable Select buildSelect(final String module) {
-        Any moduleConfig = CONFIG.getTypedAttribute(module);
+        Data moduleConfig = CONFIG.getTypedAttribute(module);
         if (moduleConfig == null) {
             return null;
         }
@@ -273,16 +315,14 @@ public class SearchRequestHelper {
         if (fieldPaths == null) {
             return null;
         }
-        Collection<SelectField> fields = fieldPaths.stream()
-                .map(SearchRequestHelper::buildSelectField)
-                .collect(Collectors.toList());
-        Select select = FACTORY.createSelect();
+        Collection<SelectField> fields = fieldPaths.stream().map(SearchRequestHelper::buildSelectField).toList();
+        Select select = REQUEST_FACTORY.createSelect();
         select.getField().addAll(fields);
         return select;
     }
 
     private static SelectField buildSelectField(final String path) {
-        SelectField field = FACTORY.createSelectField();
+        SelectField field = REQUEST_FACTORY.createSelectField();
         field.setFieldPath(path);
         return field;
     }
@@ -294,7 +334,7 @@ public class SearchRequestHelper {
      * @return combined AND expression
      */
     public static And and(final Object... expressions) {
-        And and = FACTORY.createAnd();
+        And and = REQUEST_FACTORY.createAnd();
         and.getAndOrOrOrNot().addAll(Arrays.asList(expressions));
         return and;
     }
@@ -306,7 +346,7 @@ public class SearchRequestHelper {
      * @return combined OR expression
      */
     public static Or or(final Object... expressions) {
-        Or or = FACTORY.createOr();
+        Or or = REQUEST_FACTORY.createOr();
         or.getAndOrOrOrNot().addAll(Arrays.asList(expressions));
         return or;
     }
@@ -322,17 +362,17 @@ public class SearchRequestHelper {
         //     </modules>
         //   </application>
 
-        Module module = FACTORY.createModule();
+        Module module = REQUEST_FACTORY.createModule();
         module.setName(moduleName);
         module.setSearch(search);
         if (search.getExpert() != null) {
             search.getExpert().setModule(moduleName);
         }
 
-        Modules modules = FACTORY.createModules();
+        Modules modules = REQUEST_FACTORY.createModules();
         modules.getModule().add(module);
 
-        Application application = FACTORY.createApplication();
+        Application application = REQUEST_FACTORY.createApplication();
         application.setModules(modules);
         return application;
     }
